# lazygrep

./: Cargo.toml  README.md  dist-workspace.toml
src/: grep.rs  main.rs  proc.rs  ui.rs
