[package]
name = "lazygrep"
version = "0.1.0"
description = "An example generated using the hello-world template"
authors = ["Abhishek Mukherjee <me@mukherg.com>"]
license = "MIT"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = "0.29.0"
ratatui = "0.30.0"
shlex = "2.0.1"
which = "8.0.2"
tokio = { version = "1", features = ["full"] }
nix = { version = "0.31.3", features = ["signal"] }
libc = "0.2.186"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
